[project]
name = "nichesphere"
version = "0.1.0"
description = "bla"
authors = [
    { name = "MayraRuizT", email = "aryam950812@gmail.com"},
    { name = "jsnagai", email = "james.nagai@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scanpy = "1.10.4"
leidenalg = "^0.10.2"
pot = "^0.9.5"
anndata = "0.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
